--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-blacklist-online",
-  "description": "",
-  "version": "0.0.1",
+  "description": "自用插件",
+  "version": "0.1.4",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -9,14 +9,17 @@
     "dist"
   ],
   "license": "MIT",
-  "scripts": {},
   "keywords": [
     "chatbot",
     "koishi",
-    "plugin"
+    "plugin",
+    "auto-kick",
+    "blacklist",
+    "group-management",
+    "moderation",
+    "security"
   ],
-  "devDependencies": {},
   "peerDependencies": {
-    "koishi": "4.18.9"
+    "koishi": "4.18.8"
   }
 }
